--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,8 @@
 *{
     box-sizing: border-box;
 }
-.foto{
-    width:500px;
-    
-}
-.fotog{
-    width:500px;
-    
-}
-.fotom{
-    width:200px;
-    
-}
+
+
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
@@ -25,34 +15,46 @@ p{font-size: 1.25em;}
 ul{list-style: none;}
 li{ font-size: 1.25em;}
 
-button{
-    font-size: 1.5em;
-font-weight: bold;
-border: 1px solid rgba(0, 0, 0, 0.5);
-color: white;
-background-color: royalblue;
-padding: 10px 20px;
-border-radius: 10px;
-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5)
 
-}
+
+
 .rojo{
+    background-color:#e51c24;
+}
+.rojo1:hover{
     color:#e51c24;
 }
-.amarillo{
-    color: #ff0;
+.amarillo1:hover{
+    color:#ff0;
 }
-.azul{
+.azul1:hover{
     color:#1b2884;
 }
+.naranja1:hover{
+    color:#f78d20;
+}.verde1:hover{
+    color:#1fa812;
+}
+.violeta1:hover{
+    color:#623259;
+}
+
+
+.amarillo{
+    background-color: #ff0;
+}
+.azul{
+    background-color:#1b2884;
+}
 .naranja{
-    color:#f78d20
+    background-color:#f78d20
 }
 .violeta{
-color:#623259;
+background-color:#623259;
+color:white
 }
 .verde{
-    color:#1fa812;
+    background-color:#1fa812;
 }
 .celeste{
     color:#099fec;
@@ -62,20 +64,14 @@ color:#623259;
 
 }
 
-button:hover {
-    background-color: blue;
-}
 
 .container{
 max-width: 1400px;
 margin: auto;
 }
 
-.color-acento{ color: blue; }
+.color-acento{ color: #1b2884 }
 
-header{
-background-color: beige;
-}
 header .logo{
     margin: 0;
     padding: 25px 30px;
@@ -105,27 +101,12 @@ header a{
     color: black;
     
 }
-header a:hover{
+/* header a:hover{
     color: blue;
-}
+} */
 
-#hero{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    height: 90vh;
-    background-image: linear-gradient(
-        0deg
-        rgba(0,0,0,0.5)
-        rgba(0,0,0,0.5)
-    ) 
-    ,url(pajaros.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
+
+
 #hero h1{
     color: white;}
 
