--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,14 @@ header .container{
     flex-direction: column;
     align-items: center;
 }
+footer .container{
+    display: flex;
+    width: 80%;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+}
+
 header .nav{
     display: flex;
     flex-direction: column;
