--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ color:white
 
 
 .container{
-max-width: 1400px;
+max-width: 1000px;
 margin: auto;
 }
 
@@ -122,7 +122,7 @@ header a{
     color: blue;
 } */
 
-button{
+/*button{
     font-size: 1.5em;
     font-weight: bold;
     padding: 10px 20px;
@@ -133,7 +133,7 @@ button{
 }
 button:hover{
     background-color: rgb(206, 208, 209);
-}
+} */
 
 
 #hero h1{
@@ -146,14 +146,18 @@ button:hover{
 @media only screen and (max-width:600px){
     section {
         display: block;
+        align-items: center;
         width: 100%;
         /* font-size: 16px; */
     }
     article{
         display:inline-block;
+        align-items: center;
+        text-align: center;
         width:100%;
     }
     #inicio{
+        display: inline-block;
         width: 100%;
         text-align: center;
         font-size: 42px;
@@ -177,16 +181,19 @@ button:hover{
     h1{
         font-size: 50%;  
     }
+    
 } 
 
 @media only screen and (min-width:600px){
     section {
         display: inline-block;
+        align-items: center;
         width: 48%;
         font-size: 32px;
     }
     article{
         display:inline-block;
+        text-align: center;
         width:100%;
     }
     h1{
@@ -197,11 +204,13 @@ button:hover{
 @media only screen and (min-width:1000px){
     section {
         display: inline-block;
+        align-items: center;
         width: 33%;
         font-size: 50px;
     }
     article{
         display:inline-block;
+        text-align: center;
         width:100%;
     }
     h1{
