--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,7 @@ header a{
     color: blue;
 } */
 
+
 button{
     font-size: 1.5em;
     font-weight: bold;
@@ -143,13 +144,13 @@ button:hover{
     text-align: center;
     padding: 200px 12px;
 }
-/*
+
 @media only screen and (max-width:600px){
     section {
         display: block;
         align-items: center;
         width: 100%;
-        /* font-size: 16px; */
+        font-size: 16px;
     }
     article{
         display:inline-block;
@@ -170,7 +171,7 @@ button:hover{
     .icono2{
         position: absolute;
         right: 20%;
-        height=75%;
+        height:75%;
     }
     .icono3{
         position: absolute;
@@ -218,4 +219,3 @@ button:hover{
         font-size: 100%;  
     }
 } 
-/*
