--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,11 @@ button:hover{
         text-align: center;
         font-size: 42px;
     }
+    h1{
+        font-size: 200%;  
+        text-align: center;
+    }
+    
     /*
     .icono1{
         position: absolute;
@@ -184,10 +189,8 @@ button:hover{
     /* p {
         background-color: red;
     } */
-    h1{
-        font-size: 50%;  
-    }
-    
+
+
 } 
 
 @media only screen and (min-width:600px){
