--- a/css/index.css
+++ b/css/index.css
@@ -222,11 +222,9 @@ button:hover{
         position: absolute;
         right: 40%;
     }
-     p {
+     /* p {
         background-color: red;
-    } 
-
-
+    }  */
 } 
 
 @media only screen and (min-width:600px){
